--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "http-server": "^0.11.1",
     "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "npx http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
